kustomize/services/overlays/inventory/deployment-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deployment
spec:
  template:
    spec:
      serviceAccountName: inventory-sa
      containers:
        - name: container 
          image: nexus3-docker-cicd.apps.ocp4.datr.eu/repository/docker/amazin-dev/inventory:cbc06c6
          volumeMounts:
            - mountPath: /config
              name: inventory-config-vol
      volumes:
      - configMap:
          defaultMode: 420
          name: inventory-config
        name: inventory-config-vol
